--- a/Obtención de datos.ipynb
+++ b/Obtención de datos.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "<div align = \"justify\">\n",
-    "El presente script esta destinado a la recolección de datos correspondientes al Order Book de diferentes criptomonedas, a su posible tratamiento en caso de necesidad y a la exportación de los datos a ficheros csv. El procedimiento de web scraping se basa en los pasos descritos en el enlace [1] y los datos extraidos proceden de [2].\n",
+    "El presente script esta destinado a la recolección de datos correspondientes al Order Book de diferentes criptomonedas, a su procesamiento y a la exportación de los datos resultantes a ficheros csv. El programa de extracción de datos se basa en los pasos descritos en el enlace [1] y los datos extraidos proceden de [2].\n",
     "</div>"
    ]
   },
@@ -52,17 +52,21 @@
    "source": [
     "def get_data(depth, crpt):\n",
     "    \n",
-    "    # depth: nº de datos más próximos al punto central del Order Book\n",
+    "    # depth: profundidad del Order Book por lado\n",
     "    # crpt: criptomoneda (ETHBUSD, BTCBUSD, ...)\n",
     "    \n",
+    "    # Momento temporal actual\n",
     "    tdy = datetime.now()\n",
-    "    filetdy = tdy.strftime(\"%y\") + tdy.strftime(\"%m\") + tdy.strftime(\"%d\") \n",
+    "    # año-mes-dia\n",
+    "    filetdy = tdy.strftime(\"%y\") + tdy.strftime(\"%m\") + tdy.strftime(\"%d\")\n",
+    "    # hora-mes\n",
     "    filemmn = tdy.strftime(\"%H\") + '_' + tdy.strftime(\"%M\")\n",
     "    \n",
     "    # ====================== #\n",
     "    #  Order Book DataFrame  #\n",
     "    # ====================== #\n",
-    "\n",
+    "    \n",
+    "    # Consulta a Biannce\n",
     "    ob = requests.get(\"https://api.binance.com/api/v3/depth\", params = dict(symbol = crpt, limit = depth)) \n",
     "    obResults = ob.json()\n",
     "    \n",
@@ -86,16 +90,20 @@
     "    #     Price    #\n",
     "    # ============ #\n",
     "    \n",
-    "    prc = requests.get(\"https://api.binance.com/api/v3/trades\", params = dict(symbol = crpt))\n",
-    "    prcResults = prc.json()\n",
+    "    # El código para la obtención de los precios sería el siguiente. No obstante, tal y cómo se ha indicado en el TFM, por \n",
+    "    # motivos de asociación temporal entre las instantáneas del Order Book y el precio real de la criptomoneda, se opta por\n",
+    "    # utilizar el mid-price.\n",
     "    \n",
-    "    prcData = pd.DataFrame(data = prcResults, columns = ['price', 'qty', 'quoteQty', 'time'])\n",
+    "    # prc = requests.get(\"https://api.binance.com/api/v3/trades\", params = dict(symbol = crpt))\n",
+    "    # prcResults = prc.json()\n",
+    "    \n",
+    "    # prcData = pd.DataFrame(data = prcResults, columns = ['price', 'qty', 'quoteQty', 'time'])\n",
     "    \n",
     "    # Convertimos timestamp a la fecha actual (sumamos 2 horas para ajustar zona horaria)\n",
-    "    prcData['date'] = (prcData['time'] / 1000).astype('datetime64[s]') + timedelta(hours = 2)\n",
+    "    # prcData['date'] = (prcData['time'] / 1000).astype('datetime64[s]') + timedelta(hours = 2)\n",
     "    \n",
     "    # Escribimos en formato feather\n",
-    "    prcData.to_feather('Prices/' + crpt + '/' + 'PRC_' + crpt + '_' + filetdy + '_' + filemmn + '.ftr')"
+    "    # prcData.to_feather('Prices/' + crpt + '/' + 'PRC_' + crpt + '_' + filetdy + '_' + filemmn + '.ftr')"
    ]
   },
   {
@@ -104,6 +112,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Para bitcoin y ethereum, ejecutamos el programa cada minuto.\n",
+    "\n",
     "starttime = time.time()\n",
     "while True:\n",
     "    for cr in ['ETHBUSD', 'BTCBUSD']:\n",
