--- a/Lectura y tratamiento de base de datos.ipynb
+++ b/Lectura y tratamiento de base de datos.ipynb
@@ -346,10 +346,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Tipo1(dateArray, midpriceArray, y):\n",
+    "def Tipo1(Dn, midpriceArray, y):\n",
     "    \n",
     "    # Fecha. Eliminamos los dos primeros registros por \"memoria\"\n",
-    "    D = pd.DataFrame(dateArray).iloc[2:, 0]\n",
+    "    D = pd.DataFrame(Dn).iloc[2:, 0]\n",
     "    \n",
     "    # Creamos los vectores con memoria de orden 1 y orden 2\n",
     "    subList = np.array([midpriceArray[n:n+3][::-1] for n in range(0, len(midpriceArray) - 2)])\n",
